--- a/companies/intellia.html
+++ b/companies/intellia.html
@@ -95,8 +95,9 @@
                                    Intellia is one of the original CRISPR CAS9 companies. They use the original CAS9 enzyme to do gene editing.
                                    Due to the possible risks of using a double stranded break in a person, they have focused on using the technology 
                                    for editing cells outside of humans like stem cell and T cell therapies. They also proved safety and efficacy
-                                   in human gene knockout. They are also working on building their own versions of base editing and possibly 
-                                   gene writing from their acquisition of Rewrite.
+                                   in human gene knockout. Now they are progressing toward in-vivo editing. They are work in the T cell space with 
+                                   cell editing. They are building their own versions of base editing and possibly gene writing from their 
+                                   acquisition of Rewrite. This gives them a good balance of current technology and future technology.
                               </p>
                          </section>  
 
@@ -115,24 +116,27 @@
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
                                    NTLA-2001 is their first therapy for in-vivo gene knockout of the ATTR gene. This is to remove the unwanted 
-                                   ATTR proteins that are made from mutated genes. This is in phase 1 and the data showed up to 93% knock down of 
-                                   the unwanted ATTR protein in serum.  
+                                   ATTR proteins that are made from mutated genes. This is moving into phase 2 outside the US. The data showed up to 93% knock down of 
+                                   the unwanted ATTR protein in serum. They plan to file the US IND by mid year for CM with hopes to start the trial by 
+                                   year end.
                               </p>
                               <p class="profiles">
                                    NTLA-2002 is their second therapy targeting the Kallikrein gene for knockout. The historical data from HAE 
-                                   shows that the knock down of Kallikrein in the plasma can reduce the attacks from HAE. This program is in phase 1
-                                   and they have some initial data showing up to 92% reduction in Kallikrein. They also showed an attack free 
+                                   shows that the knock down of Kallikrein in the plasma can reduce the attacks from HAE. This program started phase 2
+                                   outside the US. They submitted the IND for the US and plan to start a phase 2 if they are cleared by the FDA.
+                                   They have some initial data showing up to 92% reduction in Kallikrein. They also showed an attack free 
                                    event time improvement.
+                              </p>
+                              <p class="profiles">
+                                   NTLA-2003 is their therapy for AAT where they attempt to knock out the SERPINA1 gene. I suspect this would 
+                                   work very much like RNAi knockout programs for this target, but in a permanent manner. I find this program 
+                                   safer than the NTLA-3001 approach. It would compete with RNAi in a competitive space though. They plan to submit 
+                                   the IND for this program this year.
                               </p>
                               <p class="profiles">
                                    NTLA-3001 is their therapy for AAT where they attempt to insert the SERPINA1 gene. I would think they are attempting 
                                    this by Homology Directed Repair using a template strand. I find this program extremely concerning as so much 
                                    could go wrong with this program. I expect it to fail and be discontinued for NTLA-2003.
-                              </p>
-                              <p class="profiles">
-                                   NTLA-2003 is their therapy for AAT where they attempt to knock out the SERPINA1 gene. I suspect this would 
-                                   work very much like RNAi knockout programs for this target, but in a permanent manner. I find this program 
-                                   safer than the NTLA-3001 approach. It would compete with RNAi in a competitive space though.
                               </p>
                               <p class="profiles">
                                    NTLA-6001 is allogeneic CAR-T therapy targeting CD30 in Lymphomas. They are testing out a potential 
@@ -152,7 +156,7 @@
                                    50,000 worldwide. I think they could do about 2,000 per year for at least
                                    $2 million price as RNAi alternatives cost nearly $600,000 per year. I could see at least up to
                                    $4 billion sales. That would entitle Intellia to $3 billion in sales. With good phase 1 data, I would 
-                                   put this multiple at .5 right now. That makes it worth $1.5 billion value.
+                                   put this multiple at 1 right now. That makes it worth $3 billion value.
                               </p>
                               <p class="profiles">
                                    NTLA-2002 is a gene knock out therapy targeting HAE. This is about 7,000 patients in the US each year.
@@ -172,7 +176,7 @@
                                    NTLA-6001 is a CAR-T therapy for Lymphoma. I don't think I will give this program any value at all.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $3.5 billion market cap. Based on the 79 million shares outstanding, that comes to $44.30. 
+                                   All in, that is a $5 billion market cap. Based on the 79 million shares outstanding, that comes to $63.29. 
                               </p>
                          </section>  
 
@@ -185,6 +189,9 @@
 
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
+                              <p class="profiles">
+                                   NTLA-2001 Planning Phase 3 with regulatory authorities.
+                              </p>
                               <p class="profiles">
                                    NTLA-2001 Expect US IND submission in mid 2023
                               </p>
