--- a/companies/kymera.html
+++ b/companies/kymera.html
@@ -132,13 +132,13 @@
                               </p>
                               <p class="profiles">
                                    KT-333 inhibits the STAT3 pathway by targeting that protein for degradation. This is being developed for STAT3 driven 
-                                   hematologic malignancies. It is in the dose escaltion part of the phase 1 with them just completing the first dose level.
+                                   hematologic malignancies. It is in the dose escalation part of phase 1 with them just completing the first dose level.
                                    Right now they look to be targeting CTCL and PTCL. They have seen 66% STAT3 knockdown from biomarker data.
                               </p>
                               <p class="profiles">
                                    KT-253 targets MDM2 which is a protein that inhibits p53. The p53 protein is a key regulator of cell survival and 
                                    DNA repair. The p53 gene is mutated in about 50% of cancers. This leads to a loss of this tumor suppressor gene. By 
-                                   blocking the inhibitor of p53, they can have higher level of the p53 protein in these cells. This is designed 
+                                   blocking the inhibitor of p53, they can have higher levels of the p53 protein in these cells. This is designed 
                                    to increase the level of cell death signals in cancer cells. It is currently in IND enabling studies. 
                               </p>
                          </section>  
@@ -159,7 +159,7 @@
                                    the phase 1 trial. That makes it worth $100 million.
                               </p>
                               <p class="profiles">
-                                   KT-333 could have really big potential if it works out well in oncology with PCTL and CTCL. I would venture 
+                                   KT-333 could have really big potential if it works out well in oncology with PTCL and CTCL. I would venture 
                                    a guess of about 20,000 to 25,000 patients for these indications. With a price tag of $100,000, that comes to
                                    at least $1 billion in sales. It would depend on the data and market share. I would give this .1 multiplier since it's still early 
                                    in phase 1 with no data. That makes it worth $100 million.
@@ -178,7 +178,7 @@
                               <p class="profiles">
                                    Sanofi for IRAK4 in inflammation plus one additional target for world wide outside of oncology. Kymera has the opt in right to 
                                    any asset for up to 50% of the US. They are entitled to up to $1.7 billion in milestones, and they get royalties in 
-                                   the high single digits to high teens on any areas outside the US.
+                                   the high single digits to high teens in any areas outside the US.
                               </p>
                               <p class="profiles">
                                    Vertex partnership for areas outside Kymera's core oncology and inflammation areas. They are 
@@ -202,7 +202,7 @@
                                    KT-253 Sart Phase 1 in early 2023
                               </p>
                               <p class="profiles">
-                                   Announce next 2 preclinical asset targets this year.
+                                   Announce the next 2 preclinical asset targets this year.
                               </p>
                          </section> 
 
