--- a/companies/companies.html
+++ b/companies/companies.html
@@ -79,7 +79,7 @@
 
           <!--Here Starts the Main Body-->
 
-          <main>
+          <main class="company-format">
                <h1 class="company-title">Companies Innovating in Biotech</h1>
                <div class="page-display">
                     <div class="company-list">
