--- a/companies/intellia.html
+++ b/companies/intellia.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/12/2023</p>
+                    <p class="updated">Last Updated 2/24/2023</p>
 
                     <h1 class="company-name"><a href="https://www.intelliatx.com/">Intellia Therapeutics</a></h1>
 
@@ -95,7 +95,7 @@
                                    Intellia is one of the original CRISPR CAS9 companies. They use the original CAS9 enzyme to do gene editing.
                                    Due to the possible risks of using a double stranded break in a person, they have focused on using the technology 
                                    for editing cells outside of humans like stem cell and T cell therapies. They also proved safety and efficacy
-                                   in human gene knockout. Now they are progressing toward in-vivo editing. They are work in the T cell space with 
+                                   in human gene knockout. Now they are progressing toward in-vivo editing. They are working in the T cell space with 
                                    cell editing. They are building their own versions of base editing and possibly gene writing from their 
                                    acquisition of Rewrite. This gives them a good balance of current technology and future technology.
                               </p>
@@ -115,10 +115,11 @@
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                                   NTLA-2001 is their first therapy for in-vivo gene knockout of the ATTR gene. This is to remove the unwanted 
-                                   ATTR proteins that are made from mutated genes. This is moving into phase 2 outside the US. The data showed up to 93% knock down of 
+                                   NTLA-2001 is their first therapy for in-vivo gene knockout of the ATTR gene which they are focusing on the 
+                                   Cardiomyopathy segment of the patient population. This therapy is designed to remove the unwanted 
+                                   ATTR proteins that are made from the mutated genes. This is moving into phase 2 outside the US. The data showed up to 93% knock down of 
                                    the unwanted ATTR protein in serum. They plan to file the US IND by mid year for CM with hopes to start the trial by 
-                                   year end.
+                                   year end. The phase 1 trial of the Polyneuropathy arm is complete and they are evaluating the phase 3 design.
                               </p>
                               <p class="profiles">
                                    NTLA-2002 is their second therapy targeting the Kallikrein gene for knockout. The historical data from HAE 
@@ -128,15 +129,14 @@
                                    event time improvement.
                               </p>
                               <p class="profiles">
-                                   NTLA-2003 is their therapy for AAT where they attempt to knock out the SERPINA1 gene. I suspect this would 
-                                   work very much like RNAi knockout programs for this target, but in a permanent manner. I find this program 
-                                   safer than the NTLA-3001 approach. It would compete with RNAi in a competitive space though. They plan to submit 
-                                   the IND for this program this year.
+                                   NTLA-2003 is their therapy for AATD in the Liver where they attempt to knock out the SERPINA1 gene. I suspect this would 
+                                   work very much like RNAi knockout programs for this target, but in a permanent manner.It would compete with RNAi in a 
+                                   competitive space though. They plan to submit the IND for this program this year.
                               </p>
                               <p class="profiles">
-                                   NTLA-3001 is their therapy for AAT where they attempt to insert the SERPINA1 gene. I would think they are attempting 
-                                   this by Homology Directed Repair using a template strand. I find this program extremely concerning as so much 
-                                   could go wrong with this program. I expect it to fail and be discontinued for NTLA-2003.
+                                   NTLA-3001 is their therapy for AATD in the Lung where they attempt to insert the SERPINA1 gene. They are using 
+                                   Homology Directed Repair using a donor DNA template strand. I find this program extremely concerning as so much 
+                                   could go wrong with this program.
                               </p>
                               <p class="profiles">
                                    NTLA-6001 is allogeneic CAR-T therapy targeting CD30 in Lymphomas. They are testing out a potential 
@@ -152,8 +152,8 @@
                                    Cash $1.3 billion
                               </p>
                               <p class="profiles">
-                                   NTLA-2001 is shared 75% Intellia and 25% Regeneron. Their first program is for hATTR. This is about
-                                   50,000 worldwide. I think they could do about 2,000 per year for at least
+                                   NTLA-2001 is shared 75% Intellia and 25% Regeneron. Their first program is for hATTR CM. This is about
+                                   50,000 worldwide. I think they could do about 2,000 patients per year for at least
                                    $2 million price as RNAi alternatives cost nearly $600,000 per year. I could see at least up to
                                    $4 billion sales. That would entitle Intellia to $3 billion in sales. With good phase 1 data, I would 
                                    put this multiple at 1 right now. That makes it worth $3 billion value.
@@ -176,24 +176,45 @@
                                    NTLA-6001 is a CAR-T therapy for Lymphoma. I don't think I will give this program any value at all.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $5 billion market cap. Based on the 79 million shares outstanding, that comes to $63.29. 
+                                   All in, that is a $5 billion market cap. Based on the 88 million shares outstanding, that comes to $56.81. 
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   Licensed their CAS9 technology from Caribou. They issued shares to Caribou which they have since sold in the market.
+                                   It does not appear they own anything to Caribou any longer. They even won a patent dispute over chRDNA for CAS9 
+                                   with Caribou. They are entitled to royalties on CB010 which still uses chRDNA CAS9.
+                              </p>
+                              <p class="profiles">
+                                   Regeneron partnership for delivery to the Liver where Intellia gets 75% of sales and 
+                                   Regeneron gets 25% of sales. Their first program covers NTLA-2001 in aTTR.
+                              </p>
+                              <p class="profiles">
+                                   Regeneron partnership for delivery to the Liver where Intellia gets 50% of sales and 
+                                   Regeneron gets 50% of sales. This program covers Hemophilia A and Hemophilia B.
+                              </p>
+                              <p class="profiles">
+                                   SparingVision partnership for therapies in the eye. They are entitled to $200 million milestones for 
+                                   each program. They can even get royalties on any products. 
+                              </p><p class="profiles">
+                                   Kyverna partnership for inflammatory disorders. Intellia has the opt-in right to participate up to 50% 
+                                   in the US.
+                              </p>
+                              <p class="profiles">
+                                   ONK Therapeutics for NK cells where they can get $184 million in milestones per product and mid single 
+                                   digits royalty on any products.
                               </p>
                          </section>
 
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
-                                   NTLA-2001 Planning Phase 3 with regulatory authorities.
+                                   NTLA-2001 Planning Phase 3 with regulatory authorities for PN.
                               </p>
                               <p class="profiles">
-                                   NTLA-2001 Expect US IND submission in mid 2023
+                                   NTLA-2001 Expect US IND submission in mid 2023 for CM.
                               </p>
                               <p class="profiles">
                                    NTLA-2002 IND submission in US and start of phase 2 in 1H 2023
