--- a/companies/relay.html
+++ b/companies/relay.html
@@ -83,7 +83,7 @@
 
                <div class="company-container">
 
-                    <p class="updated">Last Updated 1/12/2023</p>
+                    <p class="updated">Last Updated 2/24/2023</p>
 
                     <h1 class="company-name"><a href="https://relaytx.com/">Relay Therapeutics</a></h1>
 
@@ -109,7 +109,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   I have been following Relay and Sanjiv Patel for a bit over a year now. I think he is a very strong 
+                                   I have been following Relay and Sanjiv Patel for over a year now. I think he is a very strong 
                                    CEO. They have built a powerful technology platform from a combination of licensing and buying 
                                    technology. He is out there telling the story at the conferences and does a good job at doing it. 
                                    They even put up some early data that impressed investors to show they can handle the drug development 
@@ -122,17 +122,34 @@
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
                                    RLY-4008 - Their first drug is for FGFR2 which is a target that previously had high levels of 
-                                   toxicity related to
-                                   this drug class. Relay developed a FGFR2 inhibitor with significantly better efficacy and significantly
+                                   toxicity related to this drug class. Relay developed a FGFR2 inhibitor with significantly better efficacy and significantly
                                    lower toxicity than all drugs before it. They wowed investors with an 88% overall response rate in
-                                   phase 1 data. The safety data was very impressive compared to previous drugs in this class. 
+                                   phase 1 data. The safety data was very impressive compared to previous drugs in this class. They are ongoing 
+                                   with phase 1.
                               </p>
                               <p class="profiles">
-                                   RLY-2608 - The second drug is for PI3Ka which has been a target
+                                   RLY-2608 - This drug is for PI3Ka which has been a target
                                    of oncology in the past, but failed repeatedly due to toxicity related to glucose regulation.
                                    They made a major breakthrough here by targeting specific mutations in this protein that are not in
                                    the wild type. This allows them to specifically target just the mutants of the protein and leave the wild
                                    type untouched. Early safety data looked very clean. Now we need to see the efficacy data.
+                              </p>
+                              <p class="profiles">
+                                   RLY-5836 - This is the second drug for PI3Ka. This is a different molecule with different metabolism and 
+                                   pharmacokinetics from RLY-2608. This is designed to be a second shot on goal for the massive market in PI3Ka.
+                              </p>
+                              <p class="profiles">
+                                   CDK2 - This is their inhibitor of the Cyclin Dependent Kinase 2 which plays a role in the cell cycle. This 
+                                   would be a companion inhibitor to the CDK4/6 inhibitors in the Breast Cancer space.
+                              </p>
+                              <p class="profiles">
+                                   ER Degarders is a protein degrader targeting the Estrogen Receptor. This is an extremely competitive space so 
+                                   only game changing data would be successful. I don't think it is impossible with their AI based program, but I 
+                                   will wait and see.
+                              </p>
+                              <p class="profiles">
+                                   GDC1971 is their SHP2 inhibitor they are developing in partnership with Genentec. This is a very toxic target 
+                                   so I don't have very high hope for this program.
                               </p>
                          </section>  
 
@@ -142,38 +159,50 @@
                                    Cash $1.1 billion
                               </p>
                               <p class="profiles">
-                                   SHP2:
-                                   They say this could be over 100,000 patients, but it is a toxic target in this
-                                   pathway. They partnered it 50/50 with Sanofi. I would give them $250 million
-                                   because I am not sold on this target yet. 
-                                   * 1 for in phase 2
-                                   = $250 million value
-                              </p>
-                              <p class="profiles">
-                                   FGFR2:
-                                   I can see at least 10,000 patients depending on market share with their data.
+                                   FGFR2 I can see at least 10,000 patients depending on market share with their data.
                                    I would give it a $100,000 price which is low for these targeted therapies. That
-                                   would be at least $1 billion potential.
-                                   * 1 for phase 1 data
-                                   = $1 billion value
+                                   would be at least $1 billion potential. I would give them a 1 multiple for some phase 1 data. 
+                                   That puts this at a value of $1 billion.
                               </p>
                               <p class="profiles">
                                    PI3Ka is a huge indication with over 100,000 potential patients. I could see them
                                    getting at least 20,000 in the easy indications. I gave them a price of $150,000
-                                   which is average for targeted therapies. That is $3 billion potential
-                                   * .1 for early phase 1
-                                   =$300 million value
+                                   which is average for targeted therapies. That is $3 billion potential. I would give this a 
+                                   .1 multiple since it still has no phase 1 data yet. That put the value at $300 million. So far
+                                   I am including both PI3Ka assets in this valuation as they would compete with each other if they 
+                                   both make it to commercial.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $2.65 billion market cap. Based on the 120 million shares outstanding
-                                   on the 10Q, that comes to $21.91.
+                                   CDK2 is a large indication with about 45,000 potential patients on CDK4/6 inhibitors. I could see 
+                                   them getting at least 10,000 in this indication. I gave them a price of $150,000
+                                   which is average for targeted therapies. That is $1.5 billion potential. I would give them a .1 
+                                   multiple for early preclinical. That gives it a value of $300 million.
+                              </p>
+                              <p class="profiles">
+                                   ER Degrader is a super competitive space where other protein degraders failed to show benefit over other 
+                                   drugs in this space. I would have to see some impressive data before I gave this program any value.
+                              </p>
+                              <p class="profiles">
+                                   SHP2 could be over 100,000 patients, but it is a toxic target in this
+                                   pathway. They partnered it 50/50 with Sanofi. I would give them $250 million
+                                   because I am not sold on this target yet. I would give this a multiple of 1 since they have
+                                   some phase 1 data so far. That puts it at a value of $250 million.
+                              </p>
+                              <p class="profiles">
+                                   All in, that is a $2.95 billion market cap. Based on the 121.4 million shares outstanding, that comes to $24.29.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   D.E. Shaw license. They license some technology for designing and developing drugs from this research 
+                                   institution. They are required to pay royalties on products they design using this technology.
+                              </p>
+                              <p class="profiles">
+                                   Genentec partnership for SHP2. Relay has an opt-in right for 50% of the US if they chose to use it. The rest 
+                                   of the world has low to mid teens royalties which will apply to the US if they don't opt-in. They are entitled for up to 
+                                   $650 million in milestones.
                               </p>
                          </section>
 
